Fix beta tag being too high on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -527,6 +527,10 @@ input[type=text]{
   display: inline-block;
   position: relative;
 
+  @include mobile{
+    margin-bottom: -.25rem;
+  }
+
   &:before{
     content: "BETA";
     width: 100%;
